--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>CFG P2P</title>
 </head>
 <body>
 <h1>CFG Peer-to-Peer Lending Platform</h1>
