Added base.html with Jinja templating.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>CFG P2P</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}CFG{% endblock %}
+{% block content %}
 <h1>CFG Peer-to-Peer Lending Platform</h1>
 <h2>Join our {{user_count}} happy customers</h2>
-
-</body>
-</html>
+{% endblock %}
