Added raw data to app.py to test rendering it in my_account.html using jinja.

--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -5,14 +5,84 @@
 <h1>My Account</h1>
 <div id="orders">
     <h2>My orders</h2>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">Order ID</th>
+            <th scope="col">Type of Order</th>
+            <th scope="col">Amount</th>
+            <th scope="col">Interest</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        {% for order in orders %}
+        <tr>
+            <td>{{order[0]}}</td>
+            <td>{{order[1]}}</td>
+            <td>{{order[2]}}</td>
+            <td>{{order[3]}}</td>
+        </tr>
+        {% endfor %}
+
+        </tbody>
+    </table>
 </div>
 
 <div id="lendings">
     <h2>My lendings</h2>
+
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">Order ID</th>
+            <th scope="col">Type of Order</th>
+            <th scope="col">Amount</th>
+            <th scope="col">Interest</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        {% for order in orders %}
+        <tr>
+            <td>{{order[0]}}</td>
+            <td>{{order[1]}}</td>
+            <td>{{order[2]}}</td>
+            <td>{{order[3]}}</td>
+        </tr>
+        {% endfor %}
+
+        </tbody>
+    </table>
+
 </div>
 
 <div id="borrowings">
     <h2>My borrowings</h2>
+
+
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">Order ID</th>
+            <th scope="col">Type of Order</th>
+            <th scope="col">Amount</th>
+            <th scope="col">Interest</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        {% for order in orders %}
+        <tr>
+            <td>{{order[0]}}</td>
+            <td>{{order[1]}}</td>
+            <td>{{order[2]}}</td>
+            <td>{{order[3]}}</td>
+        </tr>
+        {% endfor %}
+
+        </tbody>
+    </table>
 </div>
 
 {% endblock %}
