Updated index.html, updated app.py to contain endpoint to my account.

--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -53,7 +53,10 @@
     </table>
 </div>
 
-<div id="borrowings">    <table class="table table-striped">
+
+<div id="borrowings">
+    <h2>My borrowings</h2>
+    <table class="table table-striped">
 
         <thead>
         <tr class="table__header">
@@ -73,6 +76,7 @@
         {% endfor %}
 
         </tbody>
-    </table>div>
+    </table>
+    div>
 
-{% endblock %}
+    {% endblock %}
