--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
+{% block page_links %}
+<link rel="stylesheet" href="/static/css/index.css"/>
+{% endblock %}
 {% block title %}CFG{% endblock %}
 {% block content %}
-<h1>CFG Peer-to-Peer Lending Platform</h1>
+<h1>TO DO MAIN PAGE</h1>
 <h2>Join our {{user_count}} happy customers</h2>
 {% endblock %}
