Added Authentication based on Flask login library
https://www.digitalocean.com/community/tutorials/how-to-add-authentication-to-your-app-with-flask-login

--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -2,7 +2,7 @@
 {% block title %}My Account{% endblock %}
 
 {% block content %}
-<h1>My Account</h1>
+<h1>{{first_name}} {{last_name}}'s Account</h1>
 <div id="orders">
     <h2>My orders</h2>
     <table class="table table-striped">
@@ -80,3 +80,4 @@
     div>
 
     {% endblock %}
+</div>
