--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,13 @@
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"/>
     <link rel="stylesheet" href="/static/css/style.css"/>
     {% block page_links %} {% endblock %}
     {% endblock %}
 </head>
 <body>
-<div id="navbar">TO DO</div>
+{% include 'navbar.html' %}
 <div id="content">{% block content %}{% endblock %}</div>
 <div id="footer">
     {% block footer %}
