--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,18 @@
 <nav>
     TO DO NAVBAR
 </nav>
+<div class="navbar-end">
+    {% if not current_user.is_authenticated %}
+    <a href="{{ url_for('auth.login') }}" class="navbar-item">
+        Login
+    </a>
+    <a href="{{ url_for('auth.signup') }}" class="navbar-item">
+        Sign Up
+    </a>
+    {% endif %}
+    {% if current_user.is_authenticated %}
+    <a href="{{ url_for('auth.logout') }}" class="navbar-item">
+        Logout
+    </a>
+    {% endif %}
+</div>
