Changed colour of buy/sell buttons to right colours (buy - green, sell - red)

--- a/templates/order_book.html
+++ b/templates/order_book.html
@@ -17,8 +17,8 @@
 
 
         <div class="button, type-order">
-            <button class="button is-block is-info" style="background-color:red;">Buy</button>
-            <button class="button is-block is-info" style="background-color:green;">Sell</button>
+            <button class="button is-block is-info" style="background-color:green;">Buy</button>
+            <button class="button is-block is-info" style="background-color:red;">Sell</button>
         </div>
 
         <form method="POST" action="/order-book">
