--- a/templates/order_book.html
+++ b/templates/order_book.html
@@ -7,33 +7,34 @@
 <div class="column is-4 is-offset-4">
     <h3 class="title">Place Order</h3>
     <div class="box">
-        <!--        {% with messages = get_flashed_messages() %}-->
-        <!--        {% if messages %}-->
-        <!--        <div class="notification is-danger">-->
-        <!--            {{ messages[0] }}. Go to <a href="{{ url_for('auth.login') }}">login page</a>.-->
-        <!--        </div>-->
-        <!--        {% endif %}-->
-        <!--        {% endwith %}-->
-
-
-        <div class="button, type-order">
-            <button class="button is-block is-info" style="background-color:green;">Buy</button>
-            <button class="button is-block is-info" style="background-color:red;">Sell</button>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <div class="notification is-danger">
+            {{ messages[0] }}
         </div>
+        {% endif %}
+        {% endwith %}
 
-        <form method="POST" action="/order-book">
-            <div class="field">
-                <div class="control">
-                    <input class="input is-large" type="text" name="amount" placeholder="Amount" autofocus="" required>
-                </div>
+        <form method="POST" action="/create-order">
+            <div class="field control">
+                <input type="radio" value="buy" class="btn-check form-control" name="type" id="input-type-buy"
+                       autocomplete="off"
+                       checked>
+                <label class="btn btn-outline-success" for="input-type-buy">Buy</label>
+                <input type="radio" value="sell" class="btn-check form-control" name="type" id="input-type-sell"
+                       autocomplete="off">
+                <label class="btn btn-outline-danger" for="input-type-sell">Sell</label>
             </div>
 
-            <div class="field">
-                <div class="control">
-                    <input class="input is-large" type="text" name="interest_rate" placeholder="Interest Rate" required>
-                </div>
+            <div class="field control">
+                <input class="input is-large" type="number" min="1" name="amount" placeholder="Amount" autofocus=""
+                       required>
             </div>
 
+            <div class="field control">
+                <input class="input is-large" type="number" min="0" name="interest_rate" placeholder="Interest Rate"
+                       required>
+            </div>
 
             <button class="button is-block is-info is-large is-fullwidth">Submit</button>
         </form>
