removed unused index.css

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block page_links %}
-<link rel="stylesheet" href="/static/css/index.css"/>
+<!--<link rel="stylesheet" href="/static/css/index.css"/>-->
 {% endblock %}
 {% block title %}CFG{% endblock %}
 {% block content %}
