--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 {% block title %}Login{% endblock %}
 {% block content %}
 <div class="column is-4 is-offset-4">
-    <h3 class="title">Login</h3>
+    <h1>Login</h1>
     <div class="box">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
