--- a/templates/order_book.html
+++ b/templates/order_book.html
@@ -7,8 +7,8 @@
 <div class="container">
     <div class="row">
         <div class="column is-4 is-offset-1">
-            <h2 class="title">Order Book</h2>
-            <h3>Lend Orders</h3>
+            <h1>Order Book</h1>
+            <h2>Lend Orders</h2>
             <table class="table">
                 <thead class="table-dark">
                 <tr>
@@ -26,7 +26,7 @@
                 </tbody>
             </table>
 
-            <h3>Borrow Orders</h3>
+            <h2>Borrow Orders</h2>
             <table class="table">
                 <thead class="table-dark">
                 <tr>
@@ -46,7 +46,7 @@
 
         </div>
         <div class="column is-4 is-offset-2">
-            <h2 class="title">Place Order</h2>
+            <h2>Place Order</h2>
             <div class="box">
                 {% with messages = get_flashed_messages() %}
                 {% if messages %}
