--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,7 +5,7 @@
 {% block title %}Sign up{% endblock %}
 {% block content %}
 <div class="column is-4 is-offset-4">
-    <h3 class="title">Sign Up</h3>
+    <h1>Sign Up</h1>
     <div class="box">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
