Updated API endpoints for create-order form

--- a/templates/order_book.html
+++ b/templates/order_book.html
@@ -58,12 +58,12 @@
 
                 <form method="POST" action="/create-order">
                     <div class="field control">
-                        <input type="radio" value="borrow" class="btn-check form-control" name="type"
+                        <input type="radio" value="borrow" class="btn-check form-control" name="order_type"
                                id="input-type-borrow"
                                autocomplete="off"
                                checked>
                         <label class="btn btn-outline-success" for="input-type-borrow">Borrow</label>
-                        <input type="radio" value="lend" class="btn-check form-control" name="type" id="input-type-lend"
+                        <input type="radio" value="lend" class="btn-check form-control" name="order_type" id="input-type-lend"
                                autocomplete="off">
                         <label class="btn btn-outline-danger" for="input-type-lend">Lend</label>
                     </div>
