--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,9 @@
 </head>
 <body>
 {% include 'navbar.html' %}
-<div id="content">{% block content %}{% endblock %}</div>
+<div id="content" class="container">
+    {% block content %}{% endblock %}
+</div>
 <div id="footer">
     {% block footer %}
     {% endblock %}
