--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <h1>{{first_name}} {{last_name}}'s Account</h1>
-<div id="orders">
+<div id="orders" class="row">
     <h2>My orders</h2>
     <table class="table table-striped">
 
@@ -28,55 +28,56 @@
     </table>
 </div>
 
-<div id="lendings">
-    <h2>My lendings</h2>
-    <table class="table table-striped">
+<div class="row">
+    <div id="lendings" class="col-sm-6">
+        <h2>My lendings</h2>
+        <table class="table table-striped">
 
-        <thead>
-        <tr class="table__header">
-            {% for header in headers %}
-            <th class="table__cell">{{header}}</th>
+            <thead>
+            <tr class="table__header">
+                {% for header in headers %}
+                <th class="table__cell">{{header}}</th>
+                {% endfor %}
+            </tr>
+            </thead>
+
+            <tbody>
+            {% for row in orders %}
+            <tr class="table__row">
+                {% for cell in row %}
+                <td class="table__cell">{{cell}}</td>
+                {% endfor %}
+            </tr>
             {% endfor %}
-        </tr>
-        </thead>
 
-        <tbody>
-        {% for row in orders %}
-        <tr class="table__row">
-            {% for cell in row %}
-            <td class="table__cell">{{cell}}</td>
+            </tbody>
+        </table>
+    </div>
+
+
+    <div id="borrowings" class="col-sm-6">
+        <h2>My borrowings</h2>
+        <table class="table table-striped">
+
+            <thead>
+            <tr class="table__header">
+                {% for header in headers %}
+                <th class="table__cell">{{header}}</th>
+                {% endfor %}
+            </tr>
+            </thead>
+
+            <tbody>
+            {% for row in orders %}
+            <tr class="table__row">
+                {% for cell in row %}
+                <td class="table__cell">{{cell}}</td>
+                {% endfor %}
+            </tr>
             {% endfor %}
-        </tr>
-        {% endfor %}
 
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
 </div>
-
-
-<div id="borrowings">
-    <h2>My borrowings</h2>
-    <table class="table table-striped">
-
-        <thead>
-        <tr class="table__header">
-            {% for header in headers %}
-            <th class="table__cell">{{header}}</th>
-            {% endfor %}
-        </tr>
-        </thead>
-
-        <tbody>
-        {% for row in orders %}
-        <tr class="table__row">
-            {% for cell in row %}
-            <td class="table__cell">{{cell}}</td>
-            {% endfor %}
-        </tr>
-        {% endfor %}
-
-        </tbody>
-    </table>
-
-    {% endblock %}
-</div>
+{% endblock %}
