--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,7 +17,8 @@
         <form method="POST" action="/signup">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="text" name="first_name" placeholder="First Name" autofocus="" required>
+                    <input class="input is-large" type="text" name="first_name" placeholder="First Name" autofocus=""
+                           required>
                 </div>
             </div>
 
