--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h1>{{first_name}} {{last_name}}'s Account</h1>
 <div id="orders" class="row">
-    <h2>My orders</h2>
+    <h2>My Orders</h2>
     <table class="table table-striped">
 
         <thead>
@@ -29,24 +29,26 @@
 </div>
 
 <div class="row">
-    <div id="lendings" class="col-sm-6">
-        <h2>My lendings</h2>
+    <div id="contract" class="row">
+        <h2>My Contracts</h2>
         <table class="table table-striped">
 
             <thead>
             <tr class="table__header">
-                {% for header in headers %}
-                <th class="table__cell">{{header}}</th>
-                {% endfor %}
+                <th>ID</th>
+                <th>Amount</th>
+                <th>Interest Rate</th>
+                <th>Date Created</th>
             </tr>
             </thead>
 
             <tbody>
-            {% for row in orders %}
-            <tr class="table__row">
-                {% for cell in row %}
-                <td class="table__cell">{{cell}}</td>
-                {% endfor %}
+            {% for contract in contracts %}
+            <tr>
+                <td>{{contract.id}}</td>
+                <td>£{{contract.amount}}</td>
+                <td>{{contract.interest_rate}}%</td>
+                <td>{{contract.date_created}}</td>
             </tr>
             {% endfor %}
 
@@ -54,30 +56,5 @@
         </table>
     </div>
 
-
-    <div id="borrowings" class="col-sm-6">
-        <h2>My borrowings</h2>
-        <table class="table table-striped">
-
-            <thead>
-            <tr class="table__header">
-                {% for header in headers %}
-                <th class="table__cell">{{header}}</th>
-                {% endfor %}
-            </tr>
-            </thead>
-
-            <tbody>
-            {% for row in orders %}
-            <tr class="table__row">
-                {% for cell in row %}
-                <td class="table__cell">{{cell}}</td>
-                {% endfor %}
-            </tr>
-            {% endfor %}
-
-            </tbody>
-        </table>
-    </div>
 </div>
 {% endblock %}
