Finished My Account page

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <link rel="stylesheet" href="/static/css/style.css"/>
     {% block page_links %} {% endblock %}
     {% endblock %}
