--- a/templates/order_book.html
+++ b/templates/order_book.html
@@ -55,7 +55,7 @@
             {% endif %}
             {% endwith %}
 
-            <form method="POST" action="/create-order">
+            <form method="POST" action="/order">
                 <div class="field control">
                     <input type="radio" value="borrow" class="btn-check form-control" name="order_type"
                            id="input-type-borrow"
