--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,39 @@
 {% endblock %}
 {% block title %}CFG{% endblock %}
 {% block content %}
-<h1>TO DO MAIN PAGE</h1>
-<h2>Join our {{user_count}} happy customers</h2>
+<div class="title">CFG - P2P Lending project</div>
+
+<div>
+    <p> Welcome to the CFG Peer-to-Peer lending website, where you can sign up to be a lender or borrower!</p>
+    <p></p>
+</div>
+
+<div class="container">
+    <div class="lenders">
+        <img src="https://live.staticflickr.com/65535/52272094243_fe8e181abd_z.jpg" width="130" height="130">
+        <p><b>Lenders</b></p>
+        <p>Give back to your community by registering with us to be a lender. Our platform allows you to sign up in a few easy steps and lend money to the people in your community.</p>
+        </div>
+
+    <div class="borrowers">
+        <img src="https://live.staticflickr.com/65535/52272526115_5d854d6753_z.jpg" width="130" height="130">
+        <p><b>Borrowers</b></p>
+        <p>We provide personal loans to individuals in our community, so whether you need a starting fund for your business or some extra money from a trusted member in your area- our lending platform will match you with our lenders on the site. </p>
+    </div>
+
+</div>
+
+<p></p>
+
+<div class="count"><b>Join our {{user_count}} happy customers today!</b></div>
+<p></p>
+<div class="sign_up">
+    <a class="sign_up" href="signup"><font size="+3"><b>Sign up today</b></font></a>
+</div>
+
+<div>
+    <p>Thank you for using our website! </p>
+</div>
+
+
 {% endblock %}
