--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,127 @@
+.html{
+    margin: 6px;
+    scroll-behavior: smooth;
+    background-color: #314357;
+}
+
+.body{
+    border-radius: 0 0 5% 5%;
+}
+
+.navbar-item{
+    margin: 6px;
+    background-color: #c98c70;
+    color: #314357;
+    border-radius: 15% 15% 15% 15%;
+    text-decoration: none;
+}
+
+.navbar-item:hover{
+    background-color: #e3b587;
+    text-decoration: none;
+}
+
+.navbar-item:visited{
+    background-color: #e3b587;
+    text-decoration: none;
+}
+
+.navbar-item:link{
+    background-color: #e3b587;
+    text-decoration: none;
+}
+
+
+.title {
+  background-color: #FFFFFF;
+  width: 100%;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 3px white;
+  color: #e3b587;
+  font-family:fantasy;
+  text-align: left;
+  text-transform: uppercase;
+  -webkit-text-stroke: 0.5px #314357;
+  background-image: url(https://live.staticflickr.com/65535/52272296739_4f722e4798_h.jpg);
+  background-position-y: 30%;
+}
+
+#content{
+    margin: 5px;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+    justify-content: center;
+    color:#314357;
+    padding:10px;
+    text-align: center;
+}
+
+.lenders{
+    flex: center;
+    width: 40%;
+    border: 2px solid #456672;
+    border-radius: 10% 10% 10% 10%;
+    padding: 10px;
+    background-color: #FFFFFF;
+    box-shadow: 5px 5px 25px #314357;
+}
+
+
+.borrowers{
+    flex: center;
+    width: 40%;
+    border: 2px solid #456672;
+    border-radius: 10% 10% 10% 10%;
+    padding: 10px;
+    box-shadow: 5px 5px 25px #314357;
+}
+
+
+
+.count{
+    color: #314357;
+    text-align: center;
+    position: center;
+    font-size: large;
+    text-transform: uppercase;
+}
+
+.sign_up:link{
+    color: #314357;
+    text-decoration: none;
+}
+.sign_up:visited{
+    color: #314357;
+    text-decoration: none;
+}
+.sign_up{
+    text-align: center;
+    text-transform: uppercase;
+    transition: all .2s ease-in-out;
+}
+
+.sign_up:hover{
+    color: #c98c70;
+    transform: scale(1.5);
+    text-decoration: none;
+}
+
+#footer{
+    text-align: center;
+    border-radius: 0 0 10% 10%;
+    background-color: #c98c70;
+    text-transform: lowercase;
+    height: 50px;
+    border-radius: 0 0 5% 5%;
+    color: #FFFFFF;
+}
+
 .table{
 border-spacing: 1;
 margin: 1 rem;
@@ -14,3 +138,6 @@ text-align: left;
 .table__cell{
 padding: 8px;
 }
+
+
+
