--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,13 @@
 </head>
 <body>
 {% include 'navbar.html' %}
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<div class="notification is-danger">
+    {{ messages[0] }}
+</div>
+{% endif %}
+{% endwith %}
 <div id="content" class="container">
     {% block content %}{% endblock %}
 </div>
