--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,6 @@
 <head>
     {% block head %}
     <title>{% block title %}{% endblock %} - P2P</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
@@ -24,3 +23,5 @@
 </body>
 
 </html>
+
+<meta name="viewport" content="width=100vw, initial-scale=1.0">
