--- a/templates/order_book.html
+++ b/templates/order_book.html
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="field control">
-                    <input class="input is-large" type="number" min="0" name="interest_rate"
+                    <input class="input is-large" type="number" min="0" step=".01" name="interest_rate"
                            placeholder="Interest Rate"
                            required>
                 </div>
