--- a/templates/fear_greed.html
+++ b/templates/fear_greed.html
@@ -1,8 +1,14 @@
 {% extends "base.html" %}
-{% block title %}Fear and Greed Index{% endblock %}
-
+{% block page_links %}
+<!--<link rel="stylesheet" href="/static/css/index.css"/>-->
+{% endblock %}
+{% block title %}CFG{% endblock %}
 {% block content %}
+
+<div>Fear and Greed Index</div>
 <div>
+{% include 'graph.html' %}
 
 </div>
+
 {% endblock %}
