Changed the external URL in the text

--- a/templates/fear_greed.html
+++ b/templates/fear_greed.html
@@ -89,7 +89,7 @@
     <p>
         The score can vary between 0 and 100. The closer to 100, the more <b>greedy</b> the behavior of investors, according to the interpretation of the creators of the index. Conversely, the closer to 0, the more <b>fear</b> in the market. A score of 10 or less is considered <b>extreme fear</b>.
     <p>
-        For further information, visit <a href="https://fear-greed-index.com/">fear-greed-index.com</a>.
+        <a href="https://edition.cnn.com/markets/fear-and-greed#fng-faq">Learn more about the index...</a>
     </p>
 
 </div>
