Rewrote the accompanying text

--- a/templates/fear_greed.html
+++ b/templates/fear_greed.html
@@ -89,6 +89,11 @@
     <p>
         The score can vary between 0 and 100. The closer to 100, the more <b>greedy</b> the behavior of investors, according to the interpretation of the creators of the index. Conversely, the closer to 0, the more <b>fear</b> in the market. A score of 10 or less is considered <b>extreme fear</b>.
     <p>
+        We believe in supporting the sustainability and self-management of local communities.  We want to empower people to invest in each other, and avoid using the banks whose interest rates and decision-making processes are driven by the fear and greed dynamics of the stock market.
+    <p>
+        Choose Lendr.
+    </p>
+    <p>
         <a href="https://edition.cnn.com/markets/fear-and-greed#fng-faq">Learn more about the index...</a>
     </p>
 
