updated index.html and included a @media tag for different screen sizes in the style.css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,7 @@
 .navbar-item:hover{
     background-color: #e3b587;
     text-decoration: none;
+    transition: 0.3s;
 }
 
 .navbar-item:visited{
@@ -30,6 +31,42 @@
 .navbar-item:link{
     background-color: #e3b587;
     text-decoration: none;
+}
+
+/* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
+}
+
+@media only screen and (min-width: 600px) {
+  /* For tablets: */
+  .col-s-1 {width: 8.33%;}
+  .col-s-2 {width: 16.66%;}
+  .col-s-3 {width: 25%;}
+  .col-s-4 {width: 33.33%;}
+  .col-s-5 {width: 41.66%;}
+  .col-s-6 {width: 50%;}
+  .col-s-7 {width: 58.33%;}
+  .col-s-8 {width: 66.66%;}
+  .col-s-9 {width: 75%;}
+  .col-s-10 {width: 83.33%;}
+  .col-s-11 {width: 91.66%;}
+  .col-s-12 {width: 100%;}
+}
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
 }
 
 
@@ -46,7 +83,7 @@
   text-transform: uppercase;
   -webkit-text-stroke: 0.5px #314357;
   background-image: url(https://live.staticflickr.com/65535/52272296739_4f722e4798_h.jpg);
-  background-position-y: 0vw;
+  background-position-y: 30%;
 }
 
 #content{
@@ -56,10 +93,10 @@
 .container {
     display: flex;
     flex-direction: row;
-    gap: 10vw;
+    gap: 5%;
     justify-content: center;
     color:#314357;
-    padding:3vw;
+    padding:5%;
     text-align: center;
 }
 
