--- a/templates/base.html
+++ b/templates/base.html
@@ -24,4 +24,4 @@
 
 </html>
 
-<meta name="viewport" content="width=100vw, initial-scale=1.0">
+<meta name="viewport" content="device-width, initial-scale=1.0">
