--- a/templates/index.html
+++ b/templates/index.html
@@ -4,35 +4,44 @@
 {% endblock %}
 {% block title %}CFG{% endblock %}
 {% block content %}
-<div class="title">CFG - P2P Lending project</div>
+<div class="title">
+    <div class="col-12 col-s-12">
+    <font size="+8">LendR</font>
+    </div></div>
 
 <div>
-    <p> Welcome to the CFG Peer-to-Peer lending website, where you can sign up to be a lender or borrower!</p>
+    <div class="col-12 col-s-12">
+    <p> Welcome to LendR, the home of our CFG Peer-to-Peer lending website, where you can sign up to be a lender or borrower!</p>
     <p></p>
-</div>
+    </div></div>
 
 <div class="container">
     <div class="lenders">
+        <div class="col-12 col-s-12">
         <img src="https://live.staticflickr.com/65535/52272094243_fe8e181abd_z.jpg" width="130" height="130">
         <p><b>Lenders</b></p>
         <p>Give back to your community by registering with us to be a lender. Our platform allows you to sign up in a few easy steps and lend money to the people in your community.</p>
-        </div>
+        </div></div>
 
     <div class="borrowers">
+        <div class="col-12 col-s-12">
         <img src="https://live.staticflickr.com/65535/52272526115_5d854d6753_z.jpg" width="130" height="130">
         <p><b>Borrowers</b></p>
-        <p>We provide personal loans to individuals in our community, so whether you need a starting fund for your business or some extra money from a trusted member in your area- our lending platform will match you with our lenders on the site. </p>
-    </div>
+        <p>We provide personal loans to individuals in our community, so whether you need a starting fund for your business or some extra money from a trusted member in your area - our lending platform will match you with our lenders on the site. </p>
+        </div></div>
 
 </div>
 
 <p></p>
 
-<div class="count"><b>Join our {{user_count}} happy customers today!</b></div>
+<div class="count">
+    <div class="col-12 col-s-12"><b>Join our {{user_count}} happy customers today!</b>
+    </div></div>
 <p></p>
 <div class="sign_up">
+    <div class="col-12 col-s-12">
     <a class="sign_up" href="signup"><font size="+3"><b>Sign up today</b></font></a>
-</div>
+    </div></div>
 
 <p></p>
 
