--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 </div>
 {% endif %}
 {% endwith %}
-<div id="content" class="container">
+<div id="content" class="container-main">
     {% block content %}{% endblock %}
 </div>
 <div id="footer">
