--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
 <div>
     <div class="col-12 col-s-12">
-    <p> Welcome to LendR, the home of our CFG Peer-to-Peer lending website, where you can sign up to be a lender or borrower!</p>
+    <p><b> Welcome to LendR, the home of our CFG Peer-to-Peer lending website, where you can sign up to be a lender or borrower!</b></p>
     <p></p>
     </div></div>
 
