--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -2,9 +2,9 @@
 {% block title %}My Account{% endblock %}
 
 {% block content %}
-<h1>{{first_name}} {{last_name}}'s Account</h1>
+<div class="title">{{first_name}} {{last_name}}'s Account</div>
 <div class="row">
-    <div id="orders" class="col-sm-5">
+    <div id="orders" class="container2">
         <h2>My Orders</h2>
         <table class="table table-striped">
 
@@ -37,7 +37,7 @@
         </table>
     </div>
 
-    <div id="contract" class="col-sm-5 offset-sm-2">
+    <div id="contract" class="container2">
         <h2>My Contracts</h2>
         <table class="table table-striped">
 
