Reverted some of the layout changes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,8 +12,8 @@
 h2{
     margin: 0.5vw;
     padding: 1vw;
-    color: #314357;
-    background-color: #e3b587;
+    color: #e3b587;
+    background-color: #314357;
     border-radius: 1vw 1vw 1vw 1vw;
 }
 
