--- a/templates/fear_greed.html
+++ b/templates/fear_greed.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block title %}CFG{% endblock %}
 {% block content %}
-<div class="title">Fear and Greed Index</div>
+<h2>Fear and Greed Index</h2>
 <div class="container">
 {% include 'graph.html' %}
 
@@ -68,14 +68,14 @@
         </table>
     </div>
 </div>
-<div><h2>What is the Fear and Greed Index?</h2>
+<div><h3>What is the Fear and Greed Index?</h3>
     <p>
         Euphoria and panic are the two main emotional states of the market. Both are mainly responsible for causing volatility in the world’s stock markets. The Fear And Greed Index is produced by CNN Money, the economics division of American news network CNN.
     <p>
         The score can vary between 0 and 100. The closer to 100, the more <b>greedy</b> the behavior of investors, according to the interpretation of the creators of the index. Conversely, the closer to 0, the more <b>fear</b> in the market. A score of 10 or less is considered <b>extreme fear</b>.
     <p>
         We believe in supporting the sustainability and self-management of local communities.  We want to empower people to invest in each other, and avoid using the banks whose interest rates and decision-making processes are driven by the fear and greed dynamics of the stock market.
-    <h2>Choose Lendr.</h2>
+    <h3>Choose Lendr.</h3>
     <br>
     <br>
         <a href="https://edition.cnn.com/markets/fear-and-greed#fng-faq">Learn more about the index...</a>
