--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -2,10 +2,10 @@
 {% block title %}My Account{% endblock %}
 
 {% block content %}
-<div class="title">{{first_name}} {{last_name}}'s Account</div>
+<h2>{{first_name}} {{last_name}}'s Account</h2>
 <div class="row">
     <div id="orders" class="container2">
-        <h2>My Orders</h2>
+        <h3>My Orders</h3>
         <table class="table table-striped">
 
             <thead>
@@ -38,7 +38,7 @@
     </div>
 
     <div id="contract" class="container2">
-        <h2>My Contracts</h2>
+        <h3>My Contracts</h3>
         <table class="table table-striped">
 
             <thead>
