Added layout improvements

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
 
 <div>
     <div class="col-12 col-s-12">
-    <p><b> Welcome to LendR, the home of our CFG Peer-to-Peer lending website, where you can sign up to be a lender or borrower!</b></p>
-    <p></p>
-    </div></div>
+    <p><b>Welcome to LendR, the home of our CFG Peer-to-Peer lending website, where you can sign up to be a lender or borrower!</b></p>
+    </div>
+</div>
 
 <div class="container">
     <div class="lenders">
