--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h2>{{first_name}} {{last_name}}'s Account</h2>
 <div class="row">
-    <div id="orders" class="container2">
+    <div id="orders" class="column is-4 is-offset-1">
         <h3>My Orders</h3>
         <table class="table table-striped">
 
@@ -37,7 +37,7 @@
         </table>
     </div>
 
-    <div id="contract" class="container2">
+    <div id="contract" class="column is-4 is-offset-2">
         <h3>My Contracts</h3>
         <table class="table table-striped">
 
