--- a/templates/order_book.html
+++ b/templates/order_book.html
@@ -4,11 +4,11 @@
 {% endblock %}
 {% block title %}Sign up{% endblock %}
 {% block content %}
+<h2>Orders</h2>
 <div class="row">
-    <h1>Orders</h1>
     <div class="column is-4 is-offset-1">
-        <h2>Order Book</h2>
-        <h3>Lend Orders</h3>
+        <h3>Order Book</h3>
+        <h4>Lend Orders</h4>
         <table class="table">
             <thead class="table-dark">
             <tr>
@@ -26,7 +26,7 @@
             </tbody>
         </table>
 
-        <h3>Borrow Orders</h3>
+        <h4>Borrow Orders</h4>
         <table class="table">
             <thead class="table-dark">
             <tr>
@@ -46,7 +46,7 @@
 
     </div>
     <div class="column is-4 is-offset-2">
-        <h2>Place Order</h2>
+        <h3>Place Order</h3>
         <div class="box">
             <form method="POST" action="/create-order">
                 <div class="field control">
@@ -55,7 +55,8 @@
                            autocomplete="off"
                            checked>
                     <label class="btn btn-outline-success" for="input-type-borrow">Borrow</label>
-                    <input type="radio" value="lend" class="btn-check form-control" name="order_type" id="input-type-lend"
+                    <input type="radio" value="lend" class="btn-check form-control" name="order_type"
+                           id="input-type-lend"
                            autocomplete="off">
                     <label class="btn btn-outline-danger" for="input-type-lend">Lend</label>
                 </div>
