--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,7 +34,7 @@ a:hover{
 .navbar-brand{
   color: #e3b587;
   font-family:fantasy;
-  font-size: 4.5vw;
+  font-size: 3rem;
   -webkit-text-stroke: 1.5px #314357;
 }
 
